[gd_scene load_steps=5 format=2]

[ext_resource path="res://Chest.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Sprites/ClosedChest.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 34.7926

[node name="Chest" type="Node2D"]
script = ExtResource( 1 )

[node name="ChestSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 2.18268 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3.27032 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
